# libvectordpu

./: .gitignore  Makefile  README.md  format.sh  sweep_results.csv
common/: common.h  config.h
dpu/: binary.inl  kernels.h  main.c  pipeline.inl  reduce.inl  unary.inl
host/: allocator.cc  allocator.h  desc.h  fusion.h  hfuse.cc  jit.cc  jit.h  kernelids.h  logger.cc  logger.h  logger.inl  opinfo.h  queue.cc  queue.h  runtime.cc  runtime.h  timer.h  vectordesc.h  vectordpu.cc  vectordpu.h  vectordpu.inl  vfuse.cc
host/perfetto/: trace.cc  trace.h  trace_internal.h
julia/: Makefile  Project.toml
julia/lib/wrapper/: CMakeLists.txt  wrapper.cpp
julia/src/: UpmemVector.jl  display.jl  operations.jl  types.jl  utils.jl
julia/test/: runtests.jl
scripts/: install_perfetto.sh
test/: horizontal_fusion.cc  memory.inl  reduction_trace_test  test.cc  test.h  test.inl
tools/: generate.py  generate_config.py
